<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="93dp"
        android:layout_height="106dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/quiz_img"
        android:contentDescription="Quiz" />

    <TextView
        android:id="@+id/question_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:padding="12dp"
        android:text="@string/question_1"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/true_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/false_button"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/false_text"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/prev_img"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/prev_text"
            android:fontFamily="@font/poppins"
            android:padding="6dp"
            android:text="@string/prev_text" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/next_img"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="6dp"
            android:contentDescription="@string/next_text"
            android:fontFamily="@font/poppins"
            android:padding="6dp"
            android:text="@string/next_text" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="sans-serif-black"
        android:text="@string/submit_text"
        android:textColor="#FF0000"
        android:textSize="26sp"
        tools:ignore="ButtonStyle" />


</LinearLayout>